<resources>
    <string name="app_name">Jarja Media</string>
    <string name="retrofit_failure">Unable to connect</string>
    <string name="appointment">Appointments</string>
    <string name="follow_up">Follow Ups</string>
    <string name="tasks">Tasks</string>
    <string name="today">Today</string>
    <string name="Today_Agenda">TODAY\'S AGENDA</string>
    <string name="upcoming">Upcoming</string>
    <string name="previous">Previous</string>
    <string name="search">Search</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_appointment">Edit Appointment</string>
    <string name="edit">Edit</string>
    <string name="_name_of_contact">Contact *</string>
    <string name="_agent">Agent *</string>
    <string name="_website">Website</string>
    <string name="_event_title">Event Title *</string>
    <string name="_description">Description *</string>
    <string name="_start_date">Start Date *</string>
    <string name="_end_date">End Date *</string>
    <string name="_start_time">Start Time *</string>
    <string name="_end_time">End Time *</string>
    <string name="_reminder">Reminder *</string>
    <string name="name_of_contact">Contact</string>
    <string name="agent">Agent</string>
    <string name="event_title">Event Title</string>
    <string name="event">Event</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="reminder">Reminder</string>
    <string name="via">Via</string>
    <string name="property_address">Property Address</string>
    <string name="all_day">All Day</string>
    <string name="mark_complete">Mark Complete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select_begin">Select and Begin Typing</string>
    <string name="nothing_selected">Nothing Selected</string>
    <string name="error_name">Please enter Contact</string>
    <string name="error_agent">Please enter Agent</string>
    <string name="error_title">Please enter Event title</string>
    <string name="error_description">Please enter Description</string>
    <string name="error_start_date">Please select Start date</string>
    <string name="error_end_date">Please select End date</string>
    <string name="error_reminder">Please select Reminder</string>
    <string name="error_via">Please select Via</string>
    <string name="add_task">Add Task</string>
    <string name="update_task">Edit Task</string>
    <string name="name_of_task">Task</string>
    <string name="_name_of_task">Task *</string>
    <string name="type">Type</string>
    <string name="_type">Type *</string>
    <string name="assign_to">Assign To</string>
    <string name="_assign_to">Assign To *</string>
    <string name="recur">Reoccur</string>
    <string name="_recur">Reoccur *</string>
    <string name="call">Call</string>
    <string name="one_time">One Time</string>
    <string name="due">Due</string>
    <string name="Overdue">Overdue</string>
    <string name="future_tasks">Future Tasks</string>
    <string name="filters">FILTERS</string>
    <string name="add_lead">Add Lead</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="_first_name">First Name *</string>
    <string name="_last_name">Last Name *</string>
    <string name="spouse_name">Spouse Name</string>
    <string name="spouse_bday">Spouse Birthday</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="_phone">Phone Number*</string>
    <string name="phone">Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="bday_notify">Turn On Birthday Notification</string>
    <string name="anniversary_notify">Turn On Anniversary Notification</string>
    <string name="anniversary">Anniversary</string>
    <string name="company">Company</string>
    <string name="country">Country</string>
    <string name="county">Country</string>
    <string name="source">Source</string>
    <string name="time_fram">Time Frame</string>
    <string name="pre_approved">Pre-Approved</string>
    <string name="street_address_1">Street Address 1</string>
    <string name="street_address_2">Street Address 2</string>
    <string name="city_1">City 1</string>
    <string name="city_2">City 2</string>
    <string name="state_1">State 1</string>
    <string name="state_2">State 2</string>
    <string name="postal_code_1">Postal Code 1</string>
    <string name="postal_code_2">Postal Code 2</string>
    <string name="agent_comm">Complete your commission and keep track of your goal</string>
    <string name="add_filters">Add Filters</string>
    <string name="tags">Tags</string>
    <string name="price_range">Price Range</string>
    <string name="date_range">Date Range</string>
    <string name="notes">Notes</string>
    <string name="communication">Communication</string>
    <string name="lead_id">Lead ID</string>
    <string name="last_login">Last Login</string>
    <string name="last_touchWithoutColon">Last Touch</string>
    <string name="Pipeline">Pipeline</string>
    <string name="drip_compaigns">Drip Campaigns</string>
    <string name="save_and_search">Save &amp; Search</string>
    <string name="lead_score_without_colon">Lead Score</string>
    <string name="clear">Clear</string>
    <string name="lead_details">Lead Info</string>
    <string name="actions">Actions</string>
    <string name="details">Details</string>
    <string name="info">Info</string>
    <string name="message">Message</string>
    <string name="edit_lead">Edit Lead</string>
    <string name="lead_score">Lead Score : </string>
    <string name="last_touch">Last Touch : </string>
    <string name="na">&#160;N/A</string>
    <string name="assigned_to">Assigned To</string>
    <string name="primary">Primary</string>
    <string name="transaction1">Transaction 1</string>
    <string name="transaction2">Transaction 2</string>
    <string name="current">Current Stage</string>
    <string name="potential_prospect">Potential Prospect</string>
    <string name="transaction">Transaction</string>
    <string name="listing_info">Listing Info</string>
    <string name="buying_info">Buying Info</string>
    <string name="social_profiles">Social Profiles</string>
    <string name="add">Add</string>
    <string name="upgrade_social_profile">Upgrade Social Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="add_profile">Add Profile</string>
    <string name="name">Name *</string>
    <string name="profile_link">Profile Link *</string>
    <string name="site">Site *</string>
    <string name="http">https://</string>
    <string name="documents">Documents</string>
    <string name="add_file">Add File</string>
    <string name="add_documents">Add Documents</string>
    <string name="add_notes">Add Notes</string>
    <string name="open_houses">Open Houses</string>
    <string name="add_open_house">Add Open House</string>
    <string name="select_picture">Select Picture</string>
    <string name="file_name">File name</string>
    <string name="listing_price">Listing Price</string>
    <string name="_state_province">State/Province *</string>
    <string name="state_province">State/Province</string>
    <string name="city">City</string>
    <string name="_city">City *</string>
    <string name="address">Address</string>
    <string name="_address">Address *</string>
    <string name="zip_postal">Zip/Postal Code</string>
    <string name="start_date_time">Start Date Time</string>
    <string name="end_date_time">End Date Time</string>
    <string name="_start_date_time">Start Date Time *</string>
    <string name="_end_date_time">End Date Time *</string>
    <string name="open_house_steps">Open House Sign In</string>
    <string name="month">Within how many months do you plan to buy a home?</string>
    <string name="approved">Have you been pre-approved?</string>
    <string name="pay">How much do you want to pay for a house?</string>
    <string name="sell">Do you have a house to sell?</string>
    <string name="deals">Do you have anyone sending you good deals?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Smith</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="dashboard">Dashboard</string>
    <string name="leads">Leads</string>
    <string name="lead">Lead</string>
    <string name="agents">Agent(s)</string>
    <string name="calendar">Calendar</string>
    <string name="openHouses">Open Houses</string>
    <string name="addopenHouses">Add Open House</string>
    <string name="task">Task</string>
    <string name="logout">Logout</string>
    <string name="footer_text">Jarja Media 2020, All Rights Reserved.</string>
    <string name="header_text">Marketing at the speed of Today</string>
    <string name="email">Email</string>
    <string name="_email">Email *</string>
    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="_change_password">Change Password *</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT YOUR PASSWORD?</string>
    <string name="btn_submit">Forgot Password</string>
    <string name="notification_dialog">Jarja Media would like to send you notifications. Notifications may include alerts, sounds and icon badges. These can be configured in settings.</string>
    <string name="discard_dialog_text">Would you like to discard your changes?</string>
    <string name="search_hint">Search Leads</string>
    <string name="no_img">No Image Found</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="errSinglePiece">Single piece of information is required.</string>
    <string name="errSelectAgent">Agent is required.</string>
    <string name="view">View</string>
    <string name="no_records">No record(s) found</string>
    <string name="upcoming_open_house">Upcoming</string>
    <string name="past_open_house">Past</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <string name="dialog_seekbar_transition_time">Item transition time in millis</string>
    <string name="gallery">Gallery</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="permission_message">Please provide required permission</string>
    <string name="error_address">Please enter address</string>
    <string name="error_city">Please enter city</string>
</resources>