<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_lead"
            android:icon="@drawable/ic_lead"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/leads" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/calendar"
            android:visible="true" />
        <item
            android:id="@+id/nav_open_house"
            android:icon="@drawable/ic_open_house"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/openHouses" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_lead"
            android:visible="true"
            android:title="My Profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/logout" />

    </group>

</menu>
