<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center|left"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvAssignedTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_profile"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGrey_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/name"
            android:textColor="@color/colorBlack"
            android:textSize="14dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_search"
            android:hint="@string/name"
            android:paddingLeft="12dp"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/profile_link"
            android:textColor="@color/colorBlack"
            android:textSize="14dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtProfileLink"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_search"
            android:hint="@string/http"
            android:paddingLeft="12dp"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/site"
            android:textColor="@color/colorBlack"
            android:textSize="14dp"
            android:textStyle="bold" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spnSite"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_search"
            android:hint="@string/site"
            android:paddingLeft="12dp"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/colorGreen"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorRed"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>

