<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvAssignedTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_appointment"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorGrey_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnEvent"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/colorGreen"
                android:text="@string/event"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnTask"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/colorGreen"
                android:text="@string/task"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>

